blog/assets/scss/partials/base.scss
html {
    font-size: 62.5%;
    overflow-y: scroll;
}

* {
    box-sizing: border-box;
}

body {
    background-image: url('/background.svg');
    background-attachment: fixed;
    margin: 0;
    font-family: var(--base-font-family);
    font-size: 1.6rem;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

/* scrollbar styles for Firefox */
* {
    scrollbar-width: auto;
    scrollbar-color: var(--scrollbar-thumb) transparent;
}
/**/

/* scrollbar styles for Chromium */
::-webkit-scrollbar {
    height: auto;
}

::-webkit-scrollbar-thumb {
    background-color: var(--scrollbar-thumb);
}

::-webkit-scrollbar-track {
    background-color: transparent;
}
/**/

